# jdjg-fileserver

./: LICENSE  README.md  file_usage.py  main.py  pinned.txt  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: codeql.yml
