[tool.poetry]
name = "jdjg-fileserver"
version = "0.1.0"
description = "The File Server for storing different clips and media that was previously stored in google drive."
authors = ["JDBot <jdjgbot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.112.0"
python-dotenv = ">=1.0.1"
uvicorn = ">=0.30.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
